--- a/src/components/TodoList/index.css
+++ b/src/components/TodoList/index.css
@@ -137,11 +137,13 @@ body::-webkit-scrollbar {
   padding: 0.5rem;
   cursor: pointer;
   margin: 0px;
-  font-size: 20px;
+  font-size: 15px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 10px;
+  margin: auto;
 }
 
 .no-tasks {
